deploy/retrieveUnpackaged/objects/Sort_Engagement__c.object
<CustomObject>
    <description>used to create and track RFP requests and route them to the appropriate people to manage which deals are requiring RFP assistance.</description>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>Any other pertinent information.</description>
        <inlineHelpText>Any other pertinent information.</inlineHelpText>
        <label>Additional Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Opportunity__r.Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Manager_Assignment__c</fullName>
        <label>Bid Manager Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>Sid Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brent Loewen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lily Andrews - EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blind_RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>We’ll use the information entered into the “Relationship with End Customer” field to decide whether or not to check the “Blind RFP?” box.  We will then be able to report on win/lose rates for blind RFPs.</description>
        <label>Blind RFP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Opportunity__r.Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Additional comments on RFP Rejection.</inlineHelpText>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <description>High level overview of clients requirements or attach proposal</description>
        <inlineHelpText>High level overview of clients requirements or attach proposal</inlineHelpText>
        <label>Configuration</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Champion__c</fullName>
        <inlineHelpText>Who is championing the deal on your customers end?</inlineHelpText>
        <label>Customer Champion</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Received_from_Customer__c</fullName>
        <inlineHelpText>The date that the customer sent the RFP to the rep.</inlineHelpText>
        <label>Date Received from Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Center_Status__c</fullName>
        <label>Deal Center Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted  Deal Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Center Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deliverable_Due_Date__c</fullName>
        <inlineHelpText>Date the RFP is due to the customer.</inlineHelpText>
        <label>RFP Due Date to Customer</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Downselect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rackspace got selected for the second round of negotiations, the first being the initial proposal we submit</description>
        <inlineHelpText>check if Rackspace got selected for the second round of negotiations, the first being the initial proposal we submit.</inlineHelpText>
        <label>Downselect?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Other_Contact_Elaborate__c</fullName>
        <inlineHelpText>If you selected &apos;Other&apos; above, please elaborate.</inlineHelpText>
        <label>If Other Contact, Elaborate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Other__c</fullName>
        <inlineHelpText>If you selected &apos;Other&apos; above, please elaborate.</inlineHelpText>
        <label>If Other Signer, Elaborate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_The_Contact__c</fullName>
        <label>Is The Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Ultimate Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rackspace Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Deal_Importance__c</fullName>
        <description>1 being low and 10 being high, rank how important this deal is to you in comparison to other opportunities in your pipeline.</description>
        <inlineHelpText>1 being low and 10 being high, rank how important this deal is to you in comparison to other opportunities in your pipeline.</inlineHelpText>
        <label>Level of Deal Importance</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NDA_Status__c</fullName>
        <label>NDA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opp_Amount__c</fullName>
        <formula>Opportunity__r.Approval_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_ID__c</fullName>
        <formula>Opportunity__r.Opportunity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Partner__c</fullName>
        <formula>Opportunity__r.Partner_Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Stage__c</fullName>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Type__c</fullName>
        <formula>TEXT( Opportunity__r.Opportunity_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner_SSO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>opportunity the SORT request is associated with.</description>
        <inlineHelpText>opportunity the SORT request is associated with.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N50000001or5iEAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PM_Assigned_To__c</fullName>
        <label>Proposal Manager Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Dani Garcia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathryn Schwarm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yobana Diaz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lily Andrews - EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maria Olwoch - EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reema Mavani - EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gorana Granov - EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Positioning__c</fullName>
        <description>Any key differentiators that will make us stand out with the client.</description>
        <inlineHelpText>Any key differentiators that will make us stand out with the client.</inlineHelpText>
        <label>Positioning</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Segment__c</fullName>
        <label>Proposed Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Colo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFP_Business_Score__c</fullName>
        <inlineHelpText>Numeric score from 1-100 used to grade RFP Requests.</inlineHelpText>
        <label>RFP Business Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFP_Desk_Status__c</fullName>
        <label>RFP Desk Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted RFP Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP Desk Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFP_Technical_Score__c</fullName>
        <label>RFP Technical Score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFP Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_EDC_Rejection__c</fullName>
        <inlineHelpText>If RFP is being rejected, this is the reason for the rejection.</inlineHelpText>
        <label>Reason for EDC Rejection</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timeline/Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Needed</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Relationship_with_End_Customer__c</fullName>
        <description>Describe Rackspace’s prior relationship with the end customer.  If the RFP came through a partner, describe the partner’s relationship with the end customer</description>
        <inlineHelpText>Describe Rackspace’s prior relationship with the end customer.  If the RFP came through a partner, describe the partner’s relationship with the end customer.</inlineHelpText>
        <label>Relationship with End Customer</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Not Awarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP Won</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <formula>Opportunity__r.Owner_Role__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Service Level</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted - Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted - Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted - Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted - Level 4</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Solution_Engineer__c</fullName>
        <formula>Opportunity__r.Solution_Engineer__r.SSO_Username__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Engineer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Opportunity__r.Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Complexity__c</fullName>
        <description>Any one offs, uniqueness or complexity in the opportunity</description>
        <inlineHelpText>Any one offs, uniqueness or complexity in the opportunity</inlineHelpText>
        <label>Technical Complexity</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Deal_Center_Support__c</fullName>
        <description>RFP: Assistance responding to formal documentation from a customer.
Strategic Planning: Assistance in developing a strategic sales plan (pricing, contracting, positioning) for a large opportunity.
Document Support: Assistance in creating custom documentation for a customer.
Other: Any additional support.</description>
        <inlineHelpText>RFP: Assistance responding to formal documentation from customer
Strategic Planning: Assistance developing a strategic sales plan for a large opp
Document Support: Assistance creating custom documentation for a customer
Other: Any additional support</inlineHelpText>
        <label>Type of Deal Center Support</label>
        <picklist>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Who_Would_Sign_the_Rackspace_HSA__c</fullName>
        <label>Who Would Sign the Rackspace HSA</label>
        <picklist>
            <picklistValues>
                <fullName>Ultimate Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rackspace Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Opportunity__r.Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Deal Center Requests</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Company_Name__c</columns>
        <columns>Deliverable_Due_Date__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Enterprise_Deal_Center_View</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Deliverable_Due_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>PM_Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PM_Assigned_To__c</field>
            <operation>equals</operation>
            <value>Dani Garcia,Kathryn Schwarm</value>
        </filters>
        <label>US Deal Center View</label>
    </listViews>
    <nameField>
        <label>RFP Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Center Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>